@@ -1,193 +1,97 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-	<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.softserve.edu</groupId>
-	<artifactId>lv560reflec</artifactId>
-	<version>1.0</version>
+    <groupId>com.edu</groupId>
+    <artifactId>lv560jvtest</artifactId>
+    <version>1.0</version>
 
-	<packaging>jar</packaging>
+    <packaging>jar</packaging>
 
-	<name>${project.artifactId}</name>
-	<url>http://maven.apache.org</url>
+    <name>${project.artifactId}</name>
+    <url>http://maven.apache.org</url>
 
-	<properties>
-		<!-- - - - - - Encoding - - - - - -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.resources.plugin.version>2.7</maven.resources.plugin.version>
-		<!-- - - - - - Java - - - - - -->
-		<java.version>1.8</java.version>
-		<jdk.source.version>1.8</jdk.source.version>
-		<jdk.compiler.version>1.8</jdk.compiler.version>
-		<maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
-		<!-- - - - - - Reports - - - - - -->
-		<testng.reports.directory>./target/surefire-reports/test-output</testng.reports.directory>
-		<aspectj.version>1.9.19</aspectj.version>
-		<!-- - - - - - Logging - - - - - -->
-		<org.slf4j.version>2.0.5</org.slf4j.version>
-	</properties>
+    <properties>
+        <!-- - - - - - Encoding - - - - - -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- - - - - - Java - - - - - -->
+        <java.version>1.8</java.version>
+    </properties>
 
-	<dependencies>
 
-		<!-- - - - - - Test - - - - - -->
-		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<!-- <version>${org.testng.version}</version> -->
-			<version>7.4.0</version>
-			<scope>test</scope>
-		</dependency>
+    <dependencies>
 
-<!--		<dependency>-->
-<!--			<groupId>org.junit.jupiter</groupId>-->
-<!--			<artifactId>junit-jupiter-engine</artifactId>-->
-<!--			<version>5.8.1</version>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
+        <!-- - - - - - Test - - - - - -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.1</version>
+            <scope>test</scope>
+        </dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.junit.jupiter</groupId>-->
-<!--			<artifactId>junit-jupiter-params</artifactId>-->
-<!--			<version>5.8.1</version>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
+    </dependencies>
 
-		<!-- - - - - - Logging - - - - - -->
- 		<dependency>
- 			<groupId>org.slf4j</groupId>
- 			<artifactId>slf4j-api</artifactId>
- 			<version>${org.slf4j.version}</version>
- 			<scope>compile</scope>
- 		</dependency>
+    <build>
+        <finalName>${project.artifactId}</finalName>
 
- 		<dependency>
- 			<groupId>org.slf4j</groupId>
- 			<artifactId>slf4j-log4j12</artifactId>
- 			<version>${org.slf4j.version}</version>
- 			<scope>runtime</scope>
- 		</dependency>
+        <plugins>
 
-		<!-- - - - Read from Excel formats, etc. - - - -->
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi-ooxml</artifactId>
-			<version>5.2.3</version>
-		</dependency>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
 
-		<!-- - - - - - Automation - - - - - -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.seleniumhq.selenium</groupId> -->
-		<!-- <artifactId>selenium-server</artifactId> -->
-		<!-- <version>3.141.59</version> -->
-		<!-- <scope>test</scope> -->
-		<!-- </dependency> -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
 
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<!--      <version>4.1.4</version>-->
-			<version>4.6.0</version>
-			<scope>test</scope>
-		</dependency>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <argLine>-Xms512m -Xmx1024m</argLine>
+                    <skipTests>false</skipTests>
+                    <includes>
+                        <include>**/*.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
 
-		<dependency>
-			<groupId>io.github.bonigarcia</groupId>
-			<artifactId>webdrivermanager</artifactId>
-			<version>5.3.1</version>
-			<!--      <version>4.4.3</version>-->
-			<scope>test</scope>
-		</dependency>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>-Xms512m</argument>
+                        <argument>-Xmx512m</argument>
+                        <argument>-XX:NewRatio=3</argument>
+                        <argument>-XX:+PrintGCTimeStamps</argument>
+                        <argument>-XX:+PrintGCDetails</argument>
+                        <argument>-Xloggc:gc.log</argument>
+                        <argument>-classpath</argument>
+                        <classpath/>
+                        <argument>com.edu.AppSimple</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
 
-		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>htmlunit-driver</artifactId>
-			<!-- <version>2.44.0</version> -->
-			<!--      <version>3.61.0</version>-->
-			<version>4.6.0</version>
-			<scope>test</scope>
-		</dependency>
 
-		<dependency>
-			<groupId>com.codeborne</groupId>
-			<artifactId>phantomjsdriver</artifactId>
-			<version>1.5.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.11.0</version>
-		</dependency>
-
-		<!-- - - - Reports - - - -->
-<!--		<dependency>-->
-<!--			<groupId>io.qameta.allure</groupId>-->
-<!--			<artifactId>allure-testng</artifactId>-->
-			<!--      <version>2.17.3</version>-->
-<!--			<version>2.20.1</version>-->
-<!--		</dependency>-->
-
-<!--		<dependency>-->
-<!--			<groupId>org.aspectj</groupId>-->
-<!--			<artifactId>aspectjweaver</artifactId>-->
-<!--			<version>${aspectj.version}</version>-->
-			<!--      <version>1.9.19</version>-->
-			<!-- <scope>test</scope> -->
-<!--		</dependency>-->
-
-	</dependencies>
-
-	<build>
-		<plugins>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>${maven.resources.plugin.version}</version>
-				<configuration>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven.compiler.plugin.version}</version>
-				<configuration>
-					<source>${jdk.source.version}</source>
-					<target>${jdk.compiler.version}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<!-- <version>${maven.surefire.plugin.version}</version> -->
-				<configuration>
-					<argLine>-Xms512m -Xmx1024m</argLine>
-					<skipTests>false</skipTests>
-					<!-- <runOrder>reversealphabetical</runOrder> -->
-					<!-- <argLine>${surefireArgLine}</argLine> -->
-					<systemPropertyVariables>
-						<surefire.reports.directory>
-							${testng.reports.directory}
-						</surefire.reports.directory>
-					</systemPropertyVariables>
-					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
-						<!-- <file>testng1.xml</file> -->
-					</suiteXmlFiles>
-					<reportsDirectory>${testng.reports.directory}</reportsDirectory>
-<!--					<argLine>-->
-<!--						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"-->
-<!--					</argLine>-->
-				</configuration>
-			</plugin>
-
-		</plugins>
-	</build>
+        </plugins>
+    </build>
 
 </project>
